--- a/css/main.css
+++ b/css/main.css
@@ -625,7 +625,8 @@ transform: scale(1.1);
 		footer .upper .upper-right{
 			width: 100%;
 			height: 100%;
-			padding: 100px;
+			padding: 100px auto;
+			
 		}
 		footer .upper .upper-right div ul{
 			display: none;
