--- a/css/main.css
+++ b/css/main.css
@@ -626,7 +626,8 @@ transform: scale(1.1);
 			width: 100%;
 			height: 100%;
 			padding: 100px;
-			margin: auto;
+			margin-right: 100px;
+			
 			
 		}
 		footer .upper .upper-right div ul{
