--- a/css/main.css
+++ b/css/main.css
@@ -498,6 +498,7 @@ transform: scale(1.1);
 		color: #fff;
 		padding-left: 50px;
 		padding-right: 50px;
+		padding-bottom: 50px;
 		display: flex;
 		flex-direction: column;
 	}
