--- a/css/main.css
+++ b/css/main.css
@@ -625,7 +625,7 @@ transform: scale(1.1);
 		footer .upper .upper-right{
 			width: 100%;
 			height: 100%;
-			padding: 50px;
+			padding-right: 100px;
 		}
 		footer .upper .upper-right div ul{
 			display: none;
