--- a/css/main.css
+++ b/css/main.css
@@ -625,8 +625,7 @@ transform: scale(1.1);
 		footer .upper .upper-right{
 			width: 100%;
 			height: 100%;
-			position: absolute;
-			left: 100px;
+			padding: 50px;
 		}
 		footer .upper .upper-right div ul{
 			display: none;
